fix page overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,12 @@ $secondary-color: darken($primary-color, 15);
   box-sizing: border-box;
 }
 
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -35,8 +41,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  overflow-x: hidden;
 }
 
 .section-padding {
